@@ -5,7 +5,7 @@ import sys
 
 import pytest
 
-from netaddr import IPAddress, IPNetwork, INET_PTON, spanning_cidr, AddrFormatError, ZEROFILL, Z, P, NOHOST
+from netaddr import IPAddress, IPNetwork, INET_ATON, INET_PTON, spanning_cidr, AddrFormatError, ZEROFILL, Z, P, NOHOST
 
 
 def test_ipaddress_v4():
@@ -345,6 +345,9 @@ def test_ipaddress_inet_aton_constructor_v4():
     assert IPAddress('127.1') == IPAddress('127.0.0.1')
     assert IPAddress('127.0.1') == IPAddress('127.0.0.1')
 
+    # Verify explicit INET_ATON is the same as the current default
+    assert IPAddress('127', flags=INET_ATON) == IPAddress('127')
+
 
 def test_ipaddress_inet_pton_constructor_v4():
     with pytest.raises(AddrFormatError):
@@ -369,6 +372,8 @@ def test_ipaddress_constructor_zero_filled_octets_v4():
     assert IPAddress('010.000.000.001') == IPAddress('8.0.0.1')
     assert IPAddress('010.000.000.001', flags=ZEROFILL) == IPAddress('10.0.0.1')
     assert IPAddress('010.000.001', flags=ZEROFILL) == IPAddress('10.0.0.1')
+    # Verify explicit INET_ATON is the same as the current default
+    assert IPAddress('010.000.000.001', flags=INET_ATON | ZEROFILL) == IPAddress('10.0.0.1')
 
     with pytest.raises(AddrFormatError):
         assert IPAddress('010.000.001', flags=INET_PTON|ZEROFILL)
